# rawnind_jddc

./: .coverage  .envrc  .gitignore  .output.txt  .roomodes  AGENTS.md  Documentation_Plan_Updated.md  README.md  coverage.xml  custom_instructions.md  data_flow_e2d.md  legacy_abstract_trainer.py  passing_tests_list.txt  plan.md  pyproject.toml  pytest_migration_plan.md  pytest_output.txt  requirements.txt  smoke_test.py
.roo/: roo_task_sep-23-2025_10-54-13-pm.md  roo_task_sep-28-2025_5-27-02-pm.md
.roo/rules/: rules.md
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.serena/: project.yml
.serena/memories/: phase2_agent_report_analysis.md  phase2_test_results.md  project_overview.md  style_and_conventions.md  suggested_commands.md
datasets/RawNIND/: dataset.yaml
docs/: Documentation_Clusters.md  Documentation_Plan_Updated.md  docstring_template.md  fiddlesticks_comprehensive_analysis_indices.md  import_fixes_documentation.md  libs_raw.md  migration_guide.md  passing_tests.md  pattern_suggestions.md  raw.md  test_dependencies_and_experiments.md  test_e2e_training_clean_api.md  test_imports_and_layout.md  test_inference_engine.md  test_policy_no_xfail.md  test_training_loops_smoke.md
docs/.ai/: Are_there_any_improvements_or_better_alt.md  Both_of_those_would_be_great_to_have._If.md  CLI_to_Clean_API_Migration_Guide.md  Documentation_Clusters.md  Documentation_Plan.md  Documentation_Plan_Updated.md  FRS dataset.md  REFACTORING_SUMMARY.md  and_the_FRS_compliance.md  arch_prposal.md  audit_prompt_I.md  audit_prompt_II_dataset.md  audit_prompt_II_dataset_tests.md  audit_prompt_II_dependencies.md  audit_prompt_II_inference.md  audit_prompt_II_integration.md  audit_prompt_II_training.md  e2e_test_plan.md  e2e_test_plan_updated.md  gap_analysis_report.md  grokdidwut.md  parition_remediation_V.md  partition parts I & II .md  partition_plan.md  partition_remediation_I.md  partition_remediation_II.md  partition_remediation_III.md  partition_remediation_IV.md  partition_remediation_V.md  partition_remediation_VI.md  partition_remediation_VII.md  roo_task_sep-23-2025_6-52-40-am.md  test_failures.md  todo.md
docs/API/: I_thnk_the_double_interface_(simple_low-.md  OK,_you_need_to_reorganize_your_thinking.md  So_give_me_a_detailed_visual_of_our_arch.md  That_is_cool,_and_you_should_save_it_to.md  can_you_1)_please_remove_unnecessarly_qu.md  combine_those_operations_with_the_operat.md  continue.md  dual_interface_architecture.md  excellent,_now_drop_all_of_the_stuff_fro.md
docs/checkup/: REFACTORING_COMPLETION_REPORT_UPDATED.md  execution_guide.md  gpt5codex-finalreport.md  phase0_translate_preprocessing_functions.md  phase1_syntax_fixes.md  phase2_translate_configurabledataset.md  phase3_integration_function.md  phase4_delete_legacy_files.md  phase5_simplify_cleandataset.md
docs/documentation_scanner/tests/: test_documentation_scanner.py
docs/fab/: Gimme_the_detailed_visual.md  I_am__I_was_asking,_not_commanding._Plea.md  I_really_like_the_idea_of_a_composable_p.md  Ok,_let's_try_and_incrementally_flesh-ou.md  Tell_me_about_how_I_could_improve_this_c.md  That_looks_great._Check_again_to_see_if.md  complete_architecture_visual.md  drop_all_mention_of__unified__from_that.md  how_about_writing_one_or_more_pipeline_f.md  nevermind_I_guess_you_did_fine,_I_misrea.md  scratch.puml  show_me_a_UML-style_diagram_of_what_we_h.md
docs/mermaid/: dataset_data_flow.mmd
docs/plantuml/: dataset_architecture.puml
docs/tests/: test_dataset_base_contracts.md  test_e2e_dataset_clean_api.md  test_e2e_image_processing_pipeline_clean.md  test_e2e_inference_clean_api.md  test_legacy_cli_removed.md  test_policy_no_skip.md
documentation_scanner/: __init__.py  documentation_scanner.py
documentation_scanner/tests/: README.md
src/: Documentation_Plan.md  Documentation_Plan_Updated.md  __init__.py  prompt.md
src/common/extlibs/: gdn.py
src/common/libs/: json_saver.py  libimganalysis.py  np_imgops.py  pt_helpers.py  pt_losses.py  pt_ops.py  stdcompression.py  utilities.py
src/common/tools/: save_src.py
src/rawnind/: README.md  __init__.py  conftest.py  train_dc_bayer2prgb.py  train_dc_prgb2prgb.py  train_denoiser_bayer2prgb.py  train_denoiser_prgb2prgb.py  unittests.py
tests/: test_core_modules.py  test_prep_image_dataset_cache.py
tmp_DESKTOP-39O0TL4/: test_clean_api.py  test_dataloaders.py
(+1186 files in other folders)
